@@ -1588,6 +1588,7 @@ extern ECL_API cl_object mp_make_process _ARGS((cl_narg narg, ...));
 extern ECL_API cl_object mp_process_active_p(cl_object process);
 extern ECL_API cl_object mp_process_enable(cl_object process);
 extern ECL_API cl_object mp_process_yield(void);
+extern ECL_API cl_object mp_process_join(cl_object process);
 extern ECL_API cl_object mp_process_interrupt(cl_object process, cl_object function);
 extern ECL_API cl_object mp_process_kill(cl_object process);
 extern ECL_API cl_object mp_process_name(cl_object process);
