@@ -54,6 +54,8 @@ ECL 9.9.1:
  - Under OS X, you can use the environment variable ABI to select between
    32-bits (ABI=32) or 64-bits pointers (ABI=64).
 
+ - New function MP:PROCESS-JOIN, waits for a thread to terminate.
+
 * Bugs fixed:
 
  - WITH-LOCK might run into a race condition when the lock acquisition process
